<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/default_bg_color">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!-- 上半部分 -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mine_red_background">
                    <mvp.cool.master.layout.CircleImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/mine_default_avatar"
                        android:scaleType="centerCrop"
                        android:layout_centerHorizontal="true"
                        android:padding="10dp"
                        />
                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_click_login"
                        android:textColor="@color/white"
                        android:background="@null"
                        android:layout_below="@+id/ivAvatar"
                        android:layout_centerHorizontal="true"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnLogin"
                        android:background="@color/mine_follower_bg"
                        android:padding="6dp"
                        android:gravity="center_vertical">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/meFollow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="姓名:"
                                android:paddingBottom="2dp"
                                android:gravity="center_vertical"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/textFollow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/mine_follow"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                        <View
                            android:layout_width="0.3dp"
                            android:layout_height="20dp"
                            android:background="@color/black_transparent"/>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/meFans"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="电话:"
                                android:gravity="center_vertical"
                                android:paddingBottom="2dp"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/mePhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mine_fans"
                                android:gravity="center_vertical"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <!-- 下半部分 -->

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">
                    <include layout="@layout/line_h_mine_space"/>
                    <TextView
                        android:id="@+id/meSafety"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_starlight"
                        android:drawableLeft="@drawable/mine_safety"/>
                </LinearLayout>
                <include layout="@layout/line_h_mine"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="16dp">
                    <TextView
                        android:id="@+id/meBank"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_contribution"
                        android:drawableLeft="@drawable/mine_bank"/>
                    <include layout="@layout/line_h_mine_space"/>
                    <TextView
                        android:id="@+id/meBill"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_watch"
                        android:drawableLeft="@drawable/mine_bill"/>
                    <include layout="@layout/line_h_mine_space"/>
                    <TextView
                        android:id="@+id/meLocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_level"
                        android:drawableLeft="@drawable/mine_location"/>
                    <include layout="@layout/line_h_mine_space"/>
                    <TextView
                        android:id="@+id/meCoupon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_task"
                        android:drawableLeft="@drawable/mine_coupon"/>
                </LinearLayout>
                <include layout="@layout/line_h_mine"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:id="@+id/meShop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_game"
                        android:drawableLeft="@drawable/mine_shop"/>
                    <include layout="@layout/line_h_mine_space"/>
                    <TextView
                        android:id="@+id/mePassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_setting"
                        android:drawableLeft="@drawable/mine_password"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/mine_recommond"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_recommond"
                        android:drawableLeft="@drawable/mine_recommond"/>
                    <include layout="@layout/line_h_mine_space"/>
                    <TextView
                        android:id="@+id/mine_consume"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="6dp"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableRight="@drawable/ic_triangle"
                        android:text="@string/mine_consume"
                        android:drawableLeft="@drawable/mine_consume"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>